# sierpinski-cryptocurrency

./: .env  CONTINUATION_PLAN.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PLAN.md  README.md  TODO.md  UPDATED_PLAN.md  sierpinski_crypto_prompts.md
src/: crypto.rs  lib.rs  mining.rs  network.rs  transaction.rs
src/triangle/: genesis.rs  mod.rs  state.rs  validation.rs
tests/: integration_tests.rs
